# Distill_Yourself

./: .gitignore  DESIGN.md  LICENSE  README.md  README_EN.md  analyze.py  db.py  pyproject.toml  server.py  start.sh
.github/workflows/: test.yml
.knowhow/: INDEX.md  pitfalls.md  repo-map.md
chatview/: ai_engine.py  cli.py  cli_resolver.py  index.py  server.py
chatview/commands/: __init__.py  analysis.py  corrections.py  evolve.py  retrieval.py  twin.py
chatview/db/: __init__.py  core.py  corrections.py  evolve.py  insights.py  sessions.py
chatview/handlers/: chat.py  evolve.py  sync.py  twin.py
chatview/parsers/: codex.py
chatview/utils/: sync.py
docs/: USER_GUIDE.md  index.html  script.js  styles.css  vision.html
docs/plans/: 2026-06-21-evolve-page.md  2026-06-21-page-architecture-redesign.md  2026-06-25-cognitive-model-plan.md
docs/specs/: 2026-06-21-evolve-page-design.md  2026-06-21-page-architecture-redesign.md  2026-06-25-cognitive-model-spec.md
docs/video/: index.html
scripts/: check_ai_cli_resolution.py
site/: index.html  script.js  styles.css
skills/distill-yourself/: SKILL.md
static/: app.js  evolve.js  index.html  style.css  twin.js
static/css/: components.css  evolve.css  layout.css  twin.css  (+1 more)
tests/: test_ai_engine.py  test_analyze.py  test_api.py  test_cli_resolver.py  test_correction_events.py  test_db.py  test_evolve_stream.py  test_frontend_routing_static.py  test_frontend_streaming_static.py  test_index_fts.py  test_persona_avatar_static.py  test_retrieval_tools.py  test_runtime_preview_static.py  test_twin_integrity.py
(+17 files in other folders)
