[project]
name = "distill-yourself"
version = "0.1.0"
description = "Search your Claude Code and Codex history. Distill durable lessons. Teach future sessions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
distill-yourself = "server:main"
distill = "chatview.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Strict allowlist — ship only the package, top-level modules, web assets and
# the bundled skill. Avoids leaking tests/, site/, .github/, READMEs into
# site-packages (a top-level site/ would shadow the stdlib `site` module).
only-include = [
    "chatview",
    "server.py",
    "db.py",
    "analyze.py",
    "start.sh",
    "static",
    "docs",
    "skills/distill-yourself",
]
